--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,12 +51,17 @@ dependencies:
   flutter_file_dialog: ^3.0.2
   open_file: ^3.5.6
   image_picker: ^1.1.2
-  charts_flutter: ^0.12.0
+  # charts_flutter: ^0.12.0
   chinese_font_library: ^1.2.0
+  intl: ^0.19.0
+  intl_utils: ^2.8.7
+  flutter_localizations:
+    sdk: flutter
   
   
 
 dev_dependencies:
+  intl_translation: ^0.20.0
   flutter_test:
     sdk: flutter
 
