--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,18 +38,21 @@ spring.thymeleaf.suffix=.html
 # \u6587\u4EF6\u4E0A\u4F20\u914D\u7F6E
 # \u542F\u7528\u6587\u4EF6\u4E0A\u4F20
 spring.servlet.multipart.enabled=true
+# \u914D\u7F6E\u6587\u4EF6\u4E0A\u4F20\u4FDD\u5B58\u7684\u672C\u5730\u8DEF\u5F84
+file.upload-dir=uploads
 # \u4E0A\u4F20\u6587\u4EF6\u7684\u4E34\u65F6\u76EE\u5F55
-spring.servlet.multipart.location=/tmp
-# \u6587\u4EF6\u4E0A\u4F20\u7684\u76EE\u6807\u76EE\u5F55,\u4E0D\u8FC7\u6CA1\u7528\u5230\uFF0C\u4FEE\u6539\u53CA\u4E0A\u4F20\u56FE\u7247\u91C7\u7528\u4E8C\u8FDB\u5236
-file.upload-dir=F:/Fin/src/main/java/cn/hy/imgers
+#spring.servlet.multipart.location=/tmp
 
 
 
+# PS:\u6682\u65F6\u672A\u7528\u5230
 # \u6587\u4EF6\u4E0A\u4F20\u5927\u5C0F\u9650\u5236
 # \u6700\u5927\u6587\u4EF6\u5927\u5C0F
-spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-file-size=10MB
 # \u6700\u5927\u8BF7\u6C42\u5927\u5C0F
-spring.servlet.multipart.max-request-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
+
+
 
 
 
