--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   file_picker: ^8.1.2
+  video_player: ^2.9.2
+  pdfx: ^2.8.0
+  flutter_pdfview: ^1.3.3
   
   
 
